@@ -3,8 +3,17 @@ Changes in Version 0.... (....-..-..)
   - Function cvpre() now returns accurate standard error for classification 
       (before, SD was returned)
 
-  - Bugs in coef(), print(), plot() and importance() functions fixed when 
-      tree.unbiased = FALSE. 
+  - Bugs in coef.pre(), print.pre(), plot.pre() and importance() functions 
+      fixed when tree.unbiased = FALSE. 
+
+  - coef() and print() methods now also return descriptions for intercept
+      factor variables
+
+  - pre() now supports survival responses (i.e., family = "cox")
+
+  - print.pre() allows for coloring terminal nodes based on sign of rule
+      coefficient (by default, light blue and red colors are employed for
+      negative and positive coefficient values, respectively)
 
 
 
